5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1756_1577.log
== TEST (2019-05-22 15:05:22) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
t = arange(n)
d = zeros(n)
dt = (a * t ** 2 / 2) vi * t
print(dt)
-- ERROR:
File "XXXX", line 7
    dt = (a * t ** 2 / 2) vi * t
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:06:37) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
t = arange(n)
d = zeros(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:09:10) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)

d = zeros(n)
print(vetor)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:12:23) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vec = t[:n]
vetor = arange(n)

d = zeros(n)
print(vetor)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:12:34) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vec = t[:n]
vetor = arange(n)

d = zeros(n)
print(vetor)
print(d)
print(vec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:13:04) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vec[:n]
vetor = arange(n)

d = zeros(n)
print(vetor)
print(d)
print(vec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:13:47) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
t = 0[:n]
vetor = arange(n)

d = zeros(n)
print(vetor)
print(d)
print(vec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:14:16) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
t = n[:i]
vetor = arange(n)

d = zeros(n)
print(vetor)
print(d)
print(vec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:15:41) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))

vetor = arange(n)
t = vetor[:n]
d = zeros(n)
print(vetor)
print(d)
print(vec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:15:50) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))

vetor = arange(n)
t = vetor[:n]
d = zeros(n)
print(vetor)
print(d)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:39:37) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = a * t[:t]**2/2 
print(vetor)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:40:10) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = a * t **2/2 
print(vetor)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:40:31) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = a * t **2/2 
print(vetor)
print(d)
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:41:12) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a * t **2/2) + vi * t 
print(vetor)
print(d)
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:41:30) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a * t **2/2) + vi * t 
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:41:46) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a * t **2/2) + vi * t 
print(dt)
-- EXECUTION TIME:
0.372178
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:42:40) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a * t **2/2) + vi * t 
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:46:27) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a * t **2/2) + vi * t 
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:31:58) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a * t **2/2) + vi * t 
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:32:11) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]

dt = (a * t **2/2) + vi * t 
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:33:04) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]

dt = (a * t **2/2) + vi * t 
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:33:04) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]

dt = (a * t **2/2) + vi * t 
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:33:25) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]

dt = (a * t **2/2) + vi * t 
print(dt)
-- EXECUTION TIME:
0.363365
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:03:37) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
print(vetor)
t = vetor[:n]

dt = (a * t **2/2) + vi * t 
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:10:44) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro: "))
vi = float(input("velocidade inicial: "))
n = int(input("numero: "))
vetor = arange(n)
t = vetor[:n]
print(t)
dt = (a * t **2/2) + vi * t 
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
